# story-ideation-os

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  lefthook.yml  llms.txt  pyproject.toml
.claude/: settings.json
Inputs/: CHALLENGE_PROTOCOL.md  CONCEPT_TEMPLATE.md  CONCEPT_TEMPLATE_V2.md  INTELLECTUAL_FRAMEWORK.md  MASTER_BRIEF.md  RESEARCH_PROTOCOL.md  STYLE_GUIDE.md
config/: campaign_goal.json  goal.json
data/: _consumers.jsonl  glossary_master.json  leaderboard.csv  leaderboard.jsonl  top_ideas_2026-05-28.csv  top_ideas_2026-05-28.md
docs/: ARCHITECTURE.md  CHANGELOG.md  CODEBASE_MAP.md  CODEMAP.md  DESIGN_EVIDENCE_ENGINE_V7.md  INDEX.md  OPENROUTER_GUIDE.md  PROGRESSION.md  REPOSITORY_STRUCTURE.md  SOLUTION_ARCHITECTURE.md  durability.md  quarterly-review-template.md  report_v4_schema.md  stabilization-cycle.md  system_overview.html  v4_isolation.md
evals/: anti_slop.py  test_amplification_loop_terminates.py  test_amplified_slate.py  test_anti_slop.py  test_audience.py  test_challenge_passed.py  test_citations.py  test_cost_health.py  test_format_compliance.py  test_leaderboard_completeness.py  test_long_run.py  test_no_internal_ids.py  test_pipeline_parity.py  test_portfolio_distinctiveness.py  test_portfolio_slate.py  test_publication_filter_guard.py  test_quotes.py  test_rate_limit.py  test_render_numeric_claims_sourced.py  test_research_verified.py  test_resume.py  test_revenue_projection.py  test_score_calibration.py  test_score_floor.py  test_seed_picker.py  test_som_credibility_bounds.py  (+7 more)
(+548 files in other folders)
