[project]
name = "anomaly-engine"
version = "0.1.0"
description = "Anomaly Engine v3.0 — high-concept film/TV ideation harness"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<0.29",
    "numpy>=2.2,<3.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "rich>=13.9,<14.0",
    "sentence-transformers>=5.4.1",
    "tenacity>=9.1,<10.0",
    "typer>=0.15,<0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-timeout>=2.3",
    "pyright>=1.1.380",
    "ruff>=0.6",
    "pyyaml>=6.0",
    "tomli>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-timeout>=2.3",
    "pyright>=1.1.380",
    "ruff>=0.6",
    "pyyaml>=6.0",
    "tomli>=2.0",
    "pytest-httpx>=0.31",
    "pytest-mock>=3.14,<4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "S", "SIM", "PL", "RUF"]
ignore = ["ANN101", "ANN102", "PLR0913", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PLR2004"]
"evals/**" = ["S101", "ANN", "PLR2004"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
strict = ["pipeline"]
include = ["pipeline", "tests", "evals", "scripts", ".claude/hooks"]
exclude = ["**/__pycache__", "**/.venv", "Inputs"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
markers = ["online: requires network (skipped by default)"]
